--- a/CRYPTO/1 Dispersie - Hash Van-Chaum.ipynb
+++ b/CRYPTO/1 Dispersie - Hash Van-Chaum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -11,27 +11,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Introduceti variabila p:\n",
-      "15083\n",
-      "Variabila p = 15083\n",
-      "Introduceti variabila alpha:\n",
-      "154\n",
-      "Variabila alpha = 154\n",
-      "Introduceti variabila beta:\n",
-      "2307\n",
-      "Variabila beta = 2307\n",
-      "Introduceti variabila x1:\n",
-      "7431\n",
-      "Variabila x1 = 7431\n",
-      "Introduceti variabila x2:\n",
-      "5564\n",
-      "Variabila x2 = 5564\n",
-      "Introduceti variabila x3:\n",
-      "1459\n",
-      "Variabila x3 = 1459\n",
-      "Introduceti variabila x4:\n",
-      "954\n",
-      "Variabila x4 = 954\n",
       "('q = ', 7541)\n",
       "Incepem rezolvarea:\n",
       "----------------------\n",
@@ -48,44 +27,42 @@
     }
    ],
    "source": [
-    "from lib import math\n",
-    "from lib import input\n",
+    "### REZOLVAREA PROBLEMEI LOGARITMULUI PLECAND DE LA O COLIZIUNE\n",
+    "from lib.math import *\n",
     "\n",
-    "p = input.read_int('p')\n",
-    "alpha = input.read_int('alpha')\n",
-    "beta = input.read_int('beta')\n",
-    "x1 = input.read_int('x1')\n",
-    "x2 = input.read_int('x2')\n",
-    "x3 = input.read_int('x3')\n",
-    "x4 = input.read_int('x4')\n",
+    "p = 15083\n",
+    "alpha = 154\n",
+    "beta = 2307\n",
+    "x1 = 7431 \n",
+    "x2 = 5564\n",
+    "x3 = 1459\n",
+    "x4 = 954\n",
     "\n",
     "q = (p - 1)/2\n",
     "print(\"q = \", q)\n",
     "\n",
+    "### Verificam daca am rezolvat problema logaritmului discret log_alpha (beta)\n",
     "def check(alpha, beta, log_value):\n",
     "    check = 1\n",
-    "    for i in range(0, log_value):\n",
-    "        check = check * alpha\n",
-    "        check = check % p\n",
-    "    if (check == beta):\n",
+    "    if pow(alpha, log_value, p) == beta:\n",
     "        print(\"Raspunsul {0} verifica!!!!\".format(log_value))\n",
     "\n",
     "print(\"Incepem rezolvarea:\")\n",
     "print(\"----------------------\")\n",
     "print(\"Calculam d = (x4 - x2, p - 1)\")\n",
-    "d = math.gcd(x4 - x2, p - 1)\n",
+    "d = gcd(x4 - x2, p - 1)\n",
     "print(\"d = {0}\".format(d))\n",
     "if (d == 1):\n",
     "    print(\"Calculam y = (x4 - x2)^-1(mod p - 1)\")\n",
-    "    y = math.modinv(x4 - x2, p - 1)\n",
+    "    y = modinv(x4 - x2, p - 1)\n",
     "    print(\"y = {0}\".format(y))\n",
     "    print(\"Calculam log_alpha(beta) = (x1 - x3) * y (mod p - 1)\")\n",
     "    log_value = ((x1 - x3) * y) % (p - 1)\n",
     "    print(\"Verificam logaritmului: {0}\".format(log_value))\n",
-    "    checl(alpha, beta, log_value)\n",
+    "    check(alpha, beta, log_value)\n",
     "elif (d == 2):\n",
     "    print(\"Calculam y = (x4 - x2)^-1(mod q)\")\n",
-    "    y = math.modinv(x4 - x2, q)\n",
+    "    y = modinv(x4 - x2, q)\n",
     "    print(\"y = {0}\".format(y))\n",
     "    print(\"Calculam posibilitatea 1 pt log_alpha(beta) = (x1 - x3) * y (mod p - 1)\")\n",
     "    log_value = ((x1 - x3) * y) % (p - 1)\n",
@@ -116,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
