--- a/CRYPTO/2013-2014 Seminar 1.ipynb
+++ b/CRYPTO/2013-2014 Seminar 1.ipynb
@@ -2,56 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# %load lib/math.py\n",
-    "import fractions\n",
-    "\n",
-    "def gcd(a, b):\n",
-    "    return fractions.gcd(a, b)\n",
-    "\n",
-    "def egcd(a, b):\n",
-    "    if a == 0:\n",
-    "        return (b, 0, 1)\n",
-    "    else:\n",
-    "        g, y, x = egcd(b % a, a)\n",
-    "        return (g, x - (b // a) * y, y)\n",
-    "\n",
-    "# Find the modular inverse.\n",
-    "def modinv(a, m):\n",
-    "    a = a % m\n",
-    "    g, x, y = egcd(a, m)\n",
-    "    if g != 1:\n",
-    "        raise Exception('modular inverse does not exist')\n",
-    "    else:\n",
-    "        return x % m\n",
-    "\n",
-    "def pow(a, b, m):\n",
-    "    result = 1\n",
-    "    pow_value = a\n",
-    "    while b > 0:\n",
-    "        if b & 1 :\n",
-    "            result = (result * pow_value) % m\n",
-    "        b = b >> 1\n",
-    "        pow_value = (pow_value * pow_value) % m\n",
-    "    return result\n",
-    "\n",
-    "def primes_sieve(limit):\n",
-    "    limitn = limit+1\n",
-    "    not_prime = set()\n",
-    "    primes = []\n",
-    "\n",
-    "    for i in range(2, limitn):\n",
-    "        if i in not_prime:\n",
-    "            continue\n",
-    "        for f in range(i*2, limitn, i):\n",
-    "            not_prime.add(f)\n",
-    "        primes.append(i)\n",
-    "    return primes\n"
+    "from lib.math import *"
    ]
   },
   {
@@ -65,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -127,6 +84,7 @@
     "# %load hash_chaum_van.py\n",
     "\n",
     "def check(p, alpha, beta, log_value):\n",
+    "    print(log_value)\n",
     "    check = 1\n",
     "    for i in range(0, log_value):\n",
     "        check = check * alpha\n",
@@ -140,26 +98,26 @@
     "    q = (p - 1)/2\n",
     "    print(\"q = \", q)\n",
     "    print(\"Calculam d = (x4 - x2, p - 1)\")\n",
-    "    d = math.gcd(x4 - x2, p - 1)\n",
+    "    d = gcd(x4 - x2, p - 1)\n",
     "    print(\"d = {0}\".format(d))\n",
     "    if (d == 1):\n",
     "        print(\"Calculam y = (x4 - x2)^-1(mod p - 1)\")\n",
-    "        y = math.modinv(x4 - x2, p - 1)\n",
+    "        y = modinv(x4 - x2, p - 1)\n",
     "        print(\"y = {0}\".format(y))\n",
     "        print(\"Calculam log_alpha(beta) = (x1 - x3) * y (mod p - 1)\")\n",
-    "        log_value = ((x1 - x3) * y) % (p - 1)\n",
+    "        log_value = int(((x1 - x3) * y)) % (p - 1)\n",
     "        print(\"Verificam logaritmului: {0}\".format(log_value))\n",
     "        checl(alpha, beta, log_value)\n",
     "    elif (d == 2):\n",
     "        print(\"Calculam y = (x4 - x2)^-1(mod q)\")\n",
-    "        y = math.modinv(x4 - x2, q)\n",
+    "        y = modinv(x4 - x2, q)\n",
     "        print(\"y = {0}\".format(y))\n",
     "        print(\"Calculam posibilitatea 1 pt log_alpha(beta) = (x1 - x3) * y (mod p - 1)\")\n",
-    "        log_value = ((x1 - x3) * y) % (p - 1)\n",
+    "        log_value = int(((x1 - x3) * y)) % (p - 1)\n",
     "        print(\"Verficam posibilitatea 1 pentru log_alpha(beta)\", log_value)\n",
     "        check(p, alpha, beta, log_value)\n",
     "        print(\"Calculam posibilitatea 1 pt log_alpha(beta) = (x1 - x3) * y  + q (mod p - 1)\")\n",
-    "        log_value = (log_value + q) % (p - 1)\n",
+    "        log_value = int(log_value + q) % (p - 1)\n",
     "        print(\"Verficam posibilitatea 2 pentru log_alpha(beta)\", log_value)\n",
     "        check(p, alpha, beta, log_value)\n",
     "    else:\n",
@@ -168,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -180,15 +138,17 @@
      "text": [
       "Incepem rezolvarea:\n",
       "----------------------\n",
-      "('q = ', 7541)\n",
+      "q =  7541.0\n",
       "Calculam d = (x4 - x2, p - 1)\n",
       "d = 2\n",
       "Calculam y = (x4 - x2)^-1(mod q)\n",
-      "y = 4680\n",
+      "y = 4680.0\n",
       "Calculam posibilitatea 1 pt log_alpha(beta) = (x1 - x3) * y (mod p - 1)\n",
-      "('Verficam posibilitatea 1 pentru log_alpha(beta)', 2014)\n",
+      "Verficam posibilitatea 1 pentru log_alpha(beta) 2014\n",
+      "2014\n",
       "Calculam posibilitatea 1 pt log_alpha(beta) = (x1 - x3) * y  + q (mod p - 1)\n",
-      "('Verficam posibilitatea 2 pentru log_alpha(beta)', 9555)\n",
+      "Verficam posibilitatea 2 pentru log_alpha(beta) 9555\n",
+      "9555\n",
       "Raspunsul 9555 verifica!!!!\n"
      ]
     }
@@ -208,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -238,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -247,8 +207,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "150421\n",
-      "('Verificare', 1)\n"
+      "150421.0\n",
+      "Verificare 1\n"
      ]
     }
    ],
@@ -270,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +239,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "778\n"
+      "778.0\n"
      ]
     }
    ],
@@ -290,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -299,43 +259,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(719, 839, 603241, 603241)\n"
+      "778.0\n",
+      "150421.0\n",
+      "This equation has two solutions:  359.0  or 419.0\n",
+      "359 419\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "# Facem ciurul si incercam sa vedem daca p1, q1 prime si p1 + q1 = 778\n",
-    "sieve = primes_sieve(z + 1)\n",
-    "for i in range(2, z):\n",
-    "    p1 = i\n",
-    "    q1 = z - i\n",
-    "    if (p1 in sieve) and (q1 in sieve):\n",
-    "        # Check if the factorization works.\n",
-    "        p = 2 * p1 + 1\n",
-    "        q = 2 * q1 + 1\n",
-    "        if p * q == n :\n",
-    "            print(p, q, n, p * q)\n",
-    "            break"
+    "from lib.math import *\n",
+    "\n",
+    "# z = p1 + q1\n",
+    "print(z)\n",
+    "# y = 2 * p1 * q1\n",
+    "print(y / 2)\n",
+    "import math\n",
+    "a, b = solve_quadratic(-1, z, - (y / 2))\n",
+    "p1 = int(a)\n",
+    "q1 = int(z - p1)\n",
+    "print(p1, q1)\n",
+    "# Checking the solution\n",
+    "print(is_prime(p1))\n",
+    "print(is_prime(2 * p1 + 1))\n",
+    "# Checking q\n",
+    "print(is_prime(q1))\n",
+    "print(is_prime(2 * q1 + 1))\n",
+    "# Testam\n",
+    "assert(n == (2 * p1 + 1) * (2 * q1 + 1))\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
