--- a/CRYPTO/3 Semanturi Chaum van Anterwepen.ipynb
+++ b/CRYPTO/3 Semanturi Chaum van Anterwepen.ipynb
@@ -2,86 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# %load lib/math.py\n",
-    "import fractions\n",
-    "import itertools\n",
-    "import math\n",
-    "\n",
-    "def gcd(a, b):\n",
-    "    return fractions.gcd(a, b)\n",
-    "\n",
-    "def egcd(a, b):\n",
-    "    if a == 0:\n",
-    "        return (b, 0, 1)\n",
-    "    else:\n",
-    "        g, y, x = egcd(b % a, a)\n",
-    "        return (g, x - (b // a) * y, y)\n",
-    "\n",
-    "# Find the modular inverse.\n",
-    "def modinv(a, m):\n",
-    "    a = a % m\n",
-    "    g, x, y = egcd(a, m)\n",
-    "    if g != 1:\n",
-    "        raise Exception('modular inverse does not exist')\n",
-    "    else:\n",
-    "        return x % m\n",
-    "\n",
-    "def chinese_remainder(n, a):\n",
-    "    sum = 0\n",
-    "    prod = reduce(lambda a, b: a*b, n)\n",
-    "\n",
-    "    for n_i, a_i in zip(n, a):\n",
-    "        p = prod / n_i\n",
-    "        sum += a_i * modinv(p, n_i) * p\n",
-    "        print(\"Termenul \", a_i, modinv(p, n_i), p)\n",
-    "    return sum % prod\n",
-    "\n",
-    "def all_chinese_solutions(n, a):\n",
-    "    print(itertools.product(a))\n",
-    "\n",
-    "def pow(a, b, m):\n",
-    "    result = 1\n",
-    "    pow_value = a\n",
-    "    while b > 0:\n",
-    "        if b & 1 :\n",
-    "            result = (result * pow_value) % m\n",
-    "        b = b >> 1\n",
-    "        pow_value = (pow_value * pow_value) % m\n",
-    "    return result\n",
-    "\n",
-    "def primes_sieve(limit):\n",
-    "    limitn = limit+1\n",
-    "    not_prime = set()\n",
-    "    primes = []\n",
-    "\n",
-    "    for i in range(2, limitn):\n",
-    "        if i in not_prime:\n",
-    "            continue\n",
-    "        for f in range(i*2, limitn, i):\n",
-    "            not_prime.add(f)\n",
-    "        primes.append(i)\n",
-    "    return primes\n",
-    "\n",
-    "def fact(n):\n",
-    "    return math.factorial(n)\n"
+    "from lib.math import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "p = 467\n",
-    "q = (p - 1) / 2\n",
+    "q = int((p - 1) / 2)\n",
     "alpha = 4\n",
     "a = 101\n",
     "beta = 449\n",
@@ -95,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -105,16 +44,16 @@
      "output_type": "stream",
      "text": [
       "c = 40 * 7 mod p => c = 280\n",
-      "('a^ -1 (mod q)', 30)\n",
-      "('d = ', 193)\n",
-      "('COMPARISON 1', 193, 22)\n",
-      "C = 430 * 68 mod p => C = 286\n",
-      "('D = ', 208)\n",
-      "('Alpha inv', 117)\n",
-      "('d * pow(alpha_inv, e2, p)', 85499)\n",
-      "('Termenul din stanga', 251)\n",
-      "('D * pow(alpha_inv, f2, p)', 96096)\n",
-      "('Termenul din drepata', 251)\n",
+      "a^ -1 (mod q) 30\n",
+      "d =  193\n",
+      "COMPARISON 1 193 22\n",
+      "C = 141 * 434 mod p => C = 17\n",
+      "D =  21\n",
+      "Alpha inv 117\n",
+      "d * pow(alpha_inv, e2, p) 85499\n",
+      "Termenul din stanga 137\n",
+      "D * pow(alpha_inv, f2, p) 7203\n",
+      "Termenul din drepata 137\n",
       "Semantura este falsa\n"
      ]
     }
@@ -170,21 +109,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
