--- a/CRYPTO/5 Partajare - Brickell.ipynb
+++ b/CRYPTO/5 Partajare - Brickell.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -92,47 +92,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  1  1  1]\n",
+      " [ 1  1  0  0]\n",
+      " [ 1  0  1 -1]]\n",
+      "Solutiile pentru baza\n",
+      "frozenset({1, 2, 3})\n",
+      "Combinatia lineara este \n",
+      " [[-1]\n",
+      " [ 1]\n",
+      " [ 1]]\n",
+      "Print solutia da vectorul \n",
+      " [[1]\n",
+      " [0]\n",
+      " [0]]\n",
+      "Care modulo q este: \n",
+      " [[1]\n",
+      " [0]\n",
+      " [0]]\n",
+      "frozenset({1, 2, 4})\n",
+      "Combinatia lineara este \n",
+      " [[ 1]\n",
+      " [-1]\n",
+      " [ 1]]\n",
+      "Print solutia da vectorul \n",
+      " [[1]\n",
+      " [0]\n",
+      " [0]]\n",
+      "Care modulo q este: \n",
+      " [[1]\n",
+      " [0]\n",
+      " [0]]\n",
+      "frozenset({3, 4})\n",
+      "Combinatia lineara este \n",
+      " [[-1]\n",
+      " [-1]]\n",
+      "Print solutia da vectorul \n",
+      " [[-2]\n",
+      " [ 0]\n",
+      " [ 0]]\n",
+      "Care modulo q este: \n",
+      " [[1]\n",
+      " [0]\n",
+      " [0]]\n",
+      "Alta posibila solutie\n",
+      "DONE\n"
+     ]
+    }
+   ],
    "source": [
     "# Cautam sa face un sistem \n",
     "# Brute force maxim ^^\n",
     "# Scoatem o lista de solutii care pot fi\n",
     "\n",
-    "from itertools import product\n",
+    "from itertools import product, combinations\n",
     "import numpy as np\n",
     "\n",
+    "aux = np.array([0] * d)\n",
+    "aux[0] = 1\n",
+    "e = np.matrix(aux).transpose()\n",
+    "\n",
+    "def hasSolution(ma, givesol = False):\n",
+    "    for c in product([-1, 0, 1], repeat = len(indexes)):\n",
+    "        cn = np.matrix([c]).transpose()\n",
+    "        x = np.count_nonzero(abs((((ma * cn) % q) - e)))\n",
+    "        if x == 0:\n",
+    "            if givesol == True:\n",
+    "                return cn\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "# Cate solutii vrem sa determinam\n",
+    "SOLS = 1\n",
+    "\n",
     "# Incercam sa avem vectori doar cu 1, 0, si -1 ca si componente.\n",
-    "# Contains all possible vector values\n",
-    "all_vectors = list(product([-1, 0 , 1], repeat = d))\n",
-    "for solution in product(all_vectors, repeat = n):\n",
-    "    sol = [np.array(x) for x in solution]\n",
-    "    combinations = list(product([-1, 1], repeat = n))\n",
-    "    all_ok = False\n",
-    "    for c in combinations:\n",
-    "        continue\n",
-    "        ok = False\n",
-    "        for allowed in Amin:\n",
-    "            result = np.array([0] * d)\n",
-    "            for a in allowed:\n",
-    "                result += c[a - 1] * sol[a - 1]\n",
-    "            if result[0] == 1 and np.sum(result[1:]) == 0:\n",
-    "                ok = True\n",
-    "                continue\n",
-    "            else:\n",
-    "                ok = False\n",
-    "                break\n",
-    "        if ok == True:\n",
-    "            print(sol)\n",
-    "            print(c)\n",
-    "            all_ok = True\n",
+    "all_vectors = list(product([1, 0, -1], repeat = d))\n",
+    "for solution in combinations(all_vectors, n):\n",
+    "    m = np.matrix(list(solution)).transpose()\n",
+    "    ok = True\n",
+    "    for A in Amin:\n",
+    "        indexes = list(np.array(sorted(list(A))) - 1)\n",
+    "        ma = m[:, indexes]\n",
+    "        if hasSolution(ma) == False:\n",
+    "            ok = False\n",
     "            break\n",
-    "    if all_ok == True:\n",
+    "    if ok == False:\n",
+    "        continue\n",
+    "    for A in NAmax:\n",
+    "        indexes = list(np.array(sorted(list(A))) - 1)\n",
+    "        ma = m[:, indexes]\n",
+    "        if hasSolution(ma) == True:\n",
+    "            ok = False\n",
+    "            break\n",
+    "    if ok == False:\n",
+    "        continue\n",
+    "    print(m)\n",
+    "    print(\"Solutiile pentru baza\")\n",
+    "    for A in Amin:\n",
+    "        indexes = list(np.array(sorted(list(A))) - 1)\n",
+    "        ma = m[:, indexes]\n",
+    "        x = hasSolution(ma, True)\n",
+    "        print(A)\n",
+    "        print(\"Combinatia lineara este \\n\",x)\n",
+    "        print(\"Print solutia da vectorul \\n\", ma * x)\n",
+    "        print(\"Care modulo q este: \\n\", (ma * x) % q)\n",
+    "    print(\"Alta posibila solutie\")\n",
+    "    SOLS -= 1\n",
+    "    if SOLS == 0:\n",
     "        break\n",
-    "            "
+    "print(\"DONE\")\n",
+    "# Construim matricea sistemului"
    ]
   }
  ],
@@ -152,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
