Rezolvarea generala pentru Blom + Cramer pentru modulo n.

--- a/CRYPTO/6 Chei Blom.ipynb
+++ b/CRYPTO/6 Chei Blom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -30,19 +30,22 @@
     "    'B': (3749, 7121),\n",
     "    'C': (7601, 7802),\n",
     "    'D': (635, 6828), \n",
-    "}\n",
+    "}   \n",
     "\n",
-    "g = {\n",
-    "    'A': lambda x : 6018 + 6351 * x,\n",
-    "    'B': lambda x : 3749 + 7121 * x,\n",
-    "    'C': lambda x : 7601 + 7802 * x,\n",
-    "    'D': lambda x : 635 + 6828 * x, \n",
-    "}\n"
+    "g = {}\n",
+    "\n",
+    "def generateFn(coeffs):\n",
+    "    def fn(x, coeffs = coeffs):\n",
+    "        return coeffs[0] + coeffs[1] * x\n",
+    "    return fn\n",
+    "\n",
+    "for i, coeffs in polys.items():\n",
+    "    g[i] = generateFn(coeffs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
