Added a lot of tuning files.

--- a/TM/Dataset Exploration.ipynb
+++ b/TM/Dataset Exploration.ipynb
@@ -357,7 +357,11 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "We will chose to have as features only terms with frequency higher than 10, since it constitues a nice trade-off between accuracy and feature space. "
+    "We will chose to have as features only terms with frequency higher than 10, since it constitues a nice trade-off between accuracy and feature space. \n",
+    "\n",
+    "## Bigrams\n",
+    "\n",
+    "We will also use bigrams as features, since improving the feature space will results in better accuracy for our classifiers."
    ]
   }
  ],
