Better SVM Tuning.

--- a/TM/SVM Tuning .ipynb
+++ b/TM/SVM Tuning .ipynb
@@ -84,18 +84,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------\n",
+      "Training with C =  0.25\n",
+      "Training: Linear SVC Classifier\n",
+      "Sampled 3000 elements\n",
+      "\tTraining fold 1\n",
+      "Training classifier\n",
+      "\tEvaluating fold 1\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 2\n",
+      "Training classifier\n",
+      "\tEvaluating fold 2\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 3\n",
+      "Training classifier\n",
+      "\tEvaluating fold 3\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 4\n",
+      "Training classifier\n",
+      "\tEvaluating fold 4\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 5\n",
+      "Training classifier\n",
+      "\tEvaluating fold 5\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 6\n",
+      "Training classifier\n",
+      "\tEvaluating fold 6\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 7\n",
+      "Training classifier\n",
+      "\tEvaluating fold 7\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 8\n",
+      "Training classifier\n",
+      "\tEvaluating fold 8\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 9\n",
+      "Training classifier\n",
+      "\tEvaluating fold 9\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 10\n",
+      "Training classifier\n",
+      "\tEvaluating fold 10\n",
+      "Evaluating SklearnClassifier results...\n",
+      "-------------------------------\n",
+      "Training with C =  0.5\n",
+      "Training: Linear SVC Classifier\n",
+      "Sampled 3000 elements\n",
+      "\tTraining fold 1\n",
+      "Training classifier\n",
+      "\tEvaluating fold 1\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 2\n",
+      "Training classifier\n",
+      "\tEvaluating fold 2\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 3\n",
+      "Training classifier\n",
+      "\tEvaluating fold 3\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 4\n",
+      "Training classifier\n",
+      "\tEvaluating fold 4\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 5\n",
+      "Training classifier\n",
+      "\tEvaluating fold 5\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 6\n",
+      "Training classifier\n",
+      "\tEvaluating fold 6\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 7\n",
+      "Training classifier\n",
+      "\tEvaluating fold 7\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 8\n",
+      "Training classifier\n",
+      "\tEvaluating fold 8\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 9\n",
+      "Training classifier\n",
+      "\tEvaluating fold 9\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 10\n",
+      "Training classifier\n",
+      "\tEvaluating fold 10\n",
+      "Evaluating SklearnClassifier results...\n",
+      "-------------------------------\n",
+      "Training with C =  1\n",
+      "Training: Linear SVC Classifier\n",
+      "Sampled 3000 elements\n",
+      "\tTraining fold 1\n",
+      "Training classifier\n",
+      "\tEvaluating fold 1\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 2\n",
+      "Training classifier\n",
+      "\tEvaluating fold 2\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 3\n",
+      "Training classifier\n",
+      "\tEvaluating fold 3\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 4\n",
+      "Training classifier\n",
+      "\tEvaluating fold 4\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 5\n",
+      "Training classifier\n",
+      "\tEvaluating fold 5\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 6\n",
+      "Training classifier\n",
+      "\tEvaluating fold 6\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 7\n",
+      "Training classifier\n",
+      "\tEvaluating fold 7\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 8\n",
+      "Training classifier\n",
+      "\tEvaluating fold 8\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 9\n",
+      "Training classifier\n",
+      "\tEvaluating fold 9\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 10\n",
+      "Training classifier\n",
+      "\tEvaluating fold 10\n",
+      "Evaluating SklearnClassifier results...\n",
+      "-------------------------------\n",
+      "Training with C =  2\n",
+      "Training: Linear SVC Classifier\n",
+      "Sampled 3000 elements\n",
+      "\tTraining fold 1\n",
+      "Training classifier\n",
+      "\tEvaluating fold 1\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 2\n",
+      "Training classifier\n",
+      "\tEvaluating fold 2\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 3\n",
+      "Training classifier\n",
+      "\tEvaluating fold 3\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 4\n",
+      "Training classifier\n",
+      "\tEvaluating fold 4\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 5\n",
+      "Training classifier\n",
+      "\tEvaluating fold 5\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 6\n",
+      "Training classifier\n",
+      "\tEvaluating fold 6\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 7\n",
+      "Training classifier\n",
+      "\tEvaluating fold 7\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 8\n",
+      "Training classifier\n",
+      "\tEvaluating fold 8\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 9\n",
+      "Training classifier\n",
+      "\tEvaluating fold 9\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 10\n",
+      "Training classifier\n",
+      "\tEvaluating fold 10\n",
+      "Evaluating SklearnClassifier results...\n",
+      "-------------------------------\n",
+      "Training with C =  4\n",
+      "Training: Linear SVC Classifier\n",
+      "Sampled 3000 elements\n",
+      "\tTraining fold 1\n",
+      "Training classifier\n",
+      "\tEvaluating fold 1\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 2\n",
+      "Training classifier\n",
+      "\tEvaluating fold 2\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 3\n",
+      "Training classifier\n",
+      "\tEvaluating fold 3\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 4\n",
+      "Training classifier\n",
+      "\tEvaluating fold 4\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 5\n",
+      "Training classifier\n",
+      "\tEvaluating fold 5\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 6\n",
+      "Training classifier\n",
+      "\tEvaluating fold 6\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 7\n",
+      "Training classifier\n",
+      "\tEvaluating fold 7\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 8\n",
+      "Training classifier\n",
+      "\tEvaluating fold 8\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 9\n",
+      "Training classifier\n",
+      "\tEvaluating fold 9\n",
+      "Evaluating SklearnClassifier results...\n",
+      "\tTraining fold 10\n",
+      "Training classifier\n",
+      "\tEvaluating fold 10\n",
+      "Evaluating SklearnClassifier results...\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.svm import LinearSVC\n",
     "from nltk.classify import SklearnClassifier\n",
     "\n",
-    "evaluations = []\n",
-    "c_range = [0.25, 0.5, 1, 2, 4]\n",
+    "#evaluations = []\n",
+    "c_range = [0.25, 0.5, 1, 2, 4, 0]\n",
     "for c in c_range: \n",
+    "    if c != 0 :\n",
+    "        continue\n",
     "    trainer = {\n",
     "    \"name\": \"Linear SVC Classifier\",\n",
     "    \"train\": SklearnClassifier(LinearSVC(dual = False, # because number of samples > number of features,\n",
@@ -111,11 +340,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.text.Text at 0x10bcd90f0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYYAAAEZCAYAAACTsIJzAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAG/NJREFUeJzt3Xu4JVV55/Hvr7lfBPpERQPIgAxJRBxEaUjgGQ6XkPYS\nYBzzAFG5jDL4RBKcAUUTnD48jiQ4GR3jPJLBEBQktFwjIjy2oxxNi0gLLYJ205AGbK5KugnX4dL9\nzh+1DmfXYZ/Ttc+uOnvt6t/neTbsqlpV5621d+9311prr1JEYGZmNmHeoAMwM7O8ODGYmVmJE4OZ\nmZU4MZiZWYkTg5mZlTgxmJlZiRODZUvSIZJWDDqONpI0T9JTknYddCyWHycGGzhJ90k6fOr6iFga\nEb8ziJimkrSjpIskPSLpXyWtlPTxtG2FpJO77HOGpFvT83FJGyTtO6XMtWn9v++y/w3pw/tJSS9I\nej49f1LSl/o5n4jYEBGviogH+zmOtZMTg9kUkjbrsvrzwHbAb0XEjsDRwL1p21eBE7vs837gK+l5\nAHd3lpM0AhwE/KpbHBHxzvThvQNwGXB+ROyQHn/S84mZVeTEYNmSdKikNR3L90k6U9IdktZJulzS\nlh3b3y1pedq2tPPbuaSzJd2bvm3fJenYjm0npfKfk/Q4sKhLOAcA/xARTwJExKqIuCZtuxQ4RNJu\nHcd8E7AvcHnHMS4DjpOktHwCcA3wwizr54OSbupY3ixdfbwhLV8q6QvpyuNJST+UtHuvZdP2d0i6\nO9Xt36T66pYMrQWcGCx3U+ds+SPgKGAP4N8BJwNIeitwEXAqMAL8H+A6SVuk/e4FDk7fvs8FviZp\n547jHpjKvBb4TJc4bgHOk3SypL1KAUY8BIwDH+hY/X7ghohY17HuYeAXKX4orh4uAcTsTa2fqcsn\nAH8BzAfWAJ/utayk1wJfB84EXg3cR5EoraWcGGzYfCEiHouIJ4BvAvul9acCfxsRP4nCpcDzFE01\nRMTVEfFYen4lcA+woOO4D0XEl1Lb+/Nd/u7pwNeAjwA/l7RK0sKO7S83J6Urgvcx2YzU6RLgJEm/\nBewYET+eRR3MZGqSuSoilkfEeoorlv1mUfZdwPKIuD4i1kfE54F/qTluy4gTgw2bxzqePwtsn57v\nDpwpaW16rAN2BX4TQNKJHc1M64B9KL79TljDDCLi+Yj4q4g4APgN4ErgSkk7pSLXAK+TtAA4DNgG\nuKHLoa4FDqdINJdWPuvZe7TjeWd99VL2N3ll/bjTusWcGKwt1gCfiYiR9JgfEdtHxNdTO/qFwJ+k\n9fOBn1P+xlx5muGIeBo4j6Izeo+07jngKuAkimakxRHxUpd9nwNuBD5McfXQj2eAbTuWX08P59GD\nR4DdpqzbpYG/Y5lwYrBcbClpq45Ht5FBM/ky8OH0jR1J20l6p6TtKD7ANwCPp/H7pwBv7uXgks6R\n9HZJW0jaCvgosI5ipNGES4DjgPdQNC1N55PAoREx41VKBXcAb5G0j6RtgP/W5/Gmcz3wVknvSp3W\nH6V8tWUt48RgufgWRfPFc+n/3UYGTfttOCJuo+hn+N+S1gKrKL69ExErgP9J0YH8KEUz0tIe4wvg\nYuDXwEPAEcA7I+LZjhh+APwrsCbF0zX2iHg0Im6ucl4zlUnndR7wfWBF+v+M+8ywfaa6/RVFwvs8\n8DjFVdJyij4cayH5Rj1m1gtJ8yhGWP3HiPjhoOOx+vmKwcw2StIfpF9/b0XRZPUCcOuAw7KGODGY\nWRWHAKspRoX9PnBsRLw42JCsKW5KMjOzEl8xmJlZyeaDDqAOknzZY2bWo4joOh1La64YImKgj0WL\nFg08hlwergvXhesi/7qYSWsSg5mZ1cOJwczMSpwYajI6OjroELLhupjkupjkupiUe120YriqpGjD\neZiZzRVJRNs7n83MrB5ODGZmVuLEYGZmJU4MZmZW4sRgZmYlTgxmZlbSirmS5oLUdVRXTzyk1syG\ngRNDRf5QN7NNhZuSzMysxInBzMxKnBhqMjY26AjMzOrhuZJqiwFaUJVmtonwXElmZlaZE4OZmZU0\nnhgkLZS0UtIqSWd32f4bkm6U9FNJd0o6ueq+ZmZWv0b7GCTNA1YBRwAPA8uA4yNiZUeZRcDWEfFJ\nSa8G7gZ2BjZsbN+OY7iPwcysB4PsY1gA3BMRD0TEi8Bi4JgpZR4FXpWevwr4l4h4qeK+2Vi0aNAR\nmJnVo+nEsAuwpmP5wbSu05eBfSQ9DNwBnNHDvtnwcFUza4scpsT4JHBHRBwm6Y3AdyS9pdeDjHV8\nMo+OjmZ/T1Uzs7k0Pj7O+Ph4pbJN9zEcBIxFxMK0/AkgIuL8jjI3AJ+JiB+m5e8CZ1MkrRn37TjG\nwPsYzMyGySD7GJYBe0naXdKWwPHAdVPKrACOBJC0M7A3sLrivmZmVrNGm5IiYr2k04ElFEnooohY\nIem0YnNcCPwlcLGkOwABH4+ItQDd9m0yXjMz85QYtRkbcwe0mQ2PmZqSnBhqi8G/YzCz4eG5kszM\nrDInBjMzK3FiMDOzEicGMzMrcWKoiedKMrO28KgkM7NNkEclmZlZZU4MZmZW4sRgZmYlTgxmZlbi\nxFATz5NkZm3hUUm1xeC5ksxseHhUkpmZVebEYGZmJU4MZmZW4sRgZmYlTgzAyEjRedzPA/o/xsjI\nYOvBzAw8Kintn8eIolziMLP286gkMzOrzInBzMxKnBjMzKzEicHMzEqcGMzMrMSJwczMSpwYzMys\nxInBzMxKnBjMzKxk80EHYDbMpK4/HO1JG2YfsHbxFYNZHyJixseiRTNvd1KwHHmuJPKZoyiXOKw+\nfk0tV54ryczMKnNiMDOzEicGMzMrcWIwM7MSJwazBi1aNOgIzHrnUUnkM3IklzjMrP08KsnMzCpz\nYjAzsxInBjMzK3FiMDOzEicG65mkvh+birGxQUdg1juPSiKf0UA5xDEyAuvWDTYGgPnzYe3aQUfR\nvxxeU7NuZhqV5MRQHKC+YPo14Ncjlw+yXOLoV1vOw9pnpsTg+zEAIrL4xytBBmGY2SbOfQxmZlbi\nxGBmZiVODGYN8lxJNozc+Uw+HYQ5xJFDDDnFYdZWnivJzMwqc2IwM7MSJwYzMytxYjAzs5LGE4Ok\nhZJWSlol6ewu28+StFzS7ZLulPSSpJ3Stvsl3ZG239p0rGZ181xJNowaHZUkaR6wCjgCeBhYBhwf\nESunKf9u4KMRcWRaXg28LSJmnL3Ho5LaFUNOcfSrLedh9RofH2d0dHSgMQxyVNIC4J6IeCAiXgQW\nA8fMUP4E4PKOZeHmLjNrmfHx8UGHMKOmP3R3AdZ0LD+Y1r2CpG2AhcDVHasD+I6kZZJObSxKMzN7\nWU6T6P0hsDQinuhYd3BEPCLpNRQJYkVELO2281hHY+7o6OjAL9OGVaDiOm3gcUz+16wNxsfHX75S\nOPfcc19eP1efV51/f2Oa7mM4CBiLiIVp+RNARMT5XcpeA1wREYunOdYi4KmI+FyXbe5jaFEMOcXR\nr7ach9VrbGys9GV2EAbZx7AM2EvS7pK2BI4HrusS4I7AocA3OtZtK2n79Hw74CjgrqYClQb/mD+/\nqbOz2RgZ6f81hf6PMTIy2HqwTU+jTUkRsV7S6cASiiR0UUSskHRasTkuTEWPBb4dEc917L4zcK2k\nSHFeFhFLmomz/2P4m2H7rFuXx2ua032krB65N3V7Er3aYsjjQ6RfuZxHDnHkEENOcVi79NWUJOlP\nJbmRw8xmJKnvh+WhSh/DzsAySVekXzH71TOzV4iIvh+Wh0pNSSkZHAWcArwduIKiv+Cfmw2vGjcl\n1SeX88ghjhxiyCkOa5e+RyWlT91H0+MlYD5wlaTP1hblkPOdusysLTZ6xSDpDOBE4HHg74B/jIgX\n0zxI90TEG5sPc2Y5XDG0RS7fTnOII4cYcoqjX2NjnlQwJzNdMVRJDOcCfx8RD3TZ9jsRsaKeMGfP\niaE+uXwI5RBHDjHkFEe/2nIebdFvU9KNwNqOg+0g6UCAHJKCmZnVq0piuAB4umP56bTOzMxaqMov\nn0vtNBGxQVJOk++ZmWWljlH9g2wer3LFsFrSn0naIj3OAFY3HdiwcaeamU3Y+O818v5NR5XO59cC\nfwMcTjEP8ncp7rL2q+bDqyaHzue2dKzl8vPF+fNh7dqNl2tSLq9pDnGMjBRzRw1aDu+LOuTwmvY1\nKmkYODHkpS11kct55BBHDjHkFEe/cjiPmRLDRvsKJG0NfBDYB9h6Yn1E/KfaIjQzs2xU6WO4FHgd\n8AfA94FdgaeaDMrMzAanSmLYKyI+BTwTEV8F3gUc2GxYZmbtlfsUOlUSw4vp/09IejOwI/Da5kIa\nTrm/0GaWj9xHMVb5PcKF6X4M51DclnN74FONRjWEcn+h55KTpNlwm3FUUpoo770RccXchdS7HEYl\nWfvkMHIklzhyiCGnONpg1nMlRcQG4OONRGVmZlmq0sfwfyWdJWk3SSMTj8YjMzOzgajyy+f7uqyO\niNizmZB656Yka0QuPwOHgbef5NKEk0sc/crh3hT+5fMcyOGFtnrl8iGUQxw5xJBTHP3K4Tz6vVHP\nid3WR8QlNcRWixwSQw4vdC7akiRzeU1ziCOHGHKKo185nEe/ieGLHYtbA0cAt0fEe+sLsT9ODHlp\nS13kch45xJFDDDnF0a8czqOvuZIi4k+nHGwnYHFNsZmZWWaqjEqa6hlgj7oDMTOzPFSZXfWbFPdh\ngCKRvAnI+gdvZmY5y312gCp9DId2LL4EPBARDzYaVY9y6GNoS4drHXJoP61DLueRQxw5xJBTHG3Q\nb+fzHsAjEfH/0vI2wM4RcX/dgc5WDolhUzLs97OtKpcPoRziyCGGnOJog1lPiZFcCWzoWF6f1tkm\namP3qq3yMLN8VUkMm0fECxML6fmWzYVkZmaDVCUx/FrS0RMLko4BHm8uJDPLTaCiHWfAjyCjaUpa\nrEpi+DDw55J+KemXwNnAac2GZWY5EVE07g/4oZcHSA633AeqVJ4rSdL2ABHxdKMRzUIOnc8eldQ+\nuXR05hBHDjHkFEe/cjiPfkclnQd8NiKeSMvzgTMj4pzaI52lHBJDDi+01SuXyVXnz4e1awcbQy7v\n71zi6FcO59FvYlgeEW+dsu72iNi/xhj74sRguWrL+yKX88gljn7lcB79DlfdTNJWHQfbBthqhvJm\nZjbENjolBnAZ8F1JFwMCTga+2mRQZmY2OJU6nyUtBI6kmDPpSeB1EfGRhmOrzE1Jlqu2vC9yOY8c\n4hgZgXXrBhsD9N/31Ne028ljFEnhj4D7gKtnH0475T4plpnVY926wScnaHZwxLSJQdLewAnA8cCv\nKKbBUEQc1lw4w8tDVa0bf2GwYTRtU5KkDcD1wEciYk1atzoi9pzD+CrJoSnJrM1yaMLJJY4cYqgj\njtmOSnoP8CzwA0l/K+lw8O/RzczarsrvGLYDjqFoVjocuAS4NiKWNB9eNb5iMGtWW74ltyWGOuLo\n6wduUw40n6ID+riIOGL2IdXLicGsWW35MGxLDHXEUVtiyNVcJIZN5eY0Zt205cOwLTHUEUe/v3w2\nfHMamx2PVrNh5CsGswbl8u2yX7mcRw5x5BBDHXH4isHMzCqr+stnMzNj4m52g46CdMuiZi5dnBjM\nzHogIp+mpIaO7aYkMzMrcWIwa5DnSrJh1HhikLRQ0kpJqySd3WX7WZKWS7pd0p2SXpK0U5V9zXLn\n4ao2jBodrippHrAKOAJ4GFgGHB8RK6cp/27goxFxZC/7eriqWbPaMkSzLTHUEccgh6suAO6JiAci\n4kVgMcW8S9M5Abh8lvuamVkNmk4MuwBrOpYfTOteId1LeiGTNwGqvK+ZmdUnp+GqfwgsjYgnZrPz\nWEdj7ujoKKOjo/VEZWbWAuPj44yPj1cq23Qfw0HAWEQsTMufACIizu9S9hrgiohYPIt93cdgWRob\na0cHdFva1dsSQx1xDGx2VUmbAXdTdCA/AtwKnBARK6aU2xFYDewaEc/1sm8q68RgWcrlQ6RfuZxH\nDnHkEEMdccyUGBptSoqI9ZJOB5ZQ9GdcFBErJJ1WbI4LU9FjgW9PJIWZ9m0yXjMz8+yqZo3K5dtl\nv3I5jxziyCGGOuLw7KpmZlaZE4OZmZU4MZg1yHMl2TByH4OZbVRb2tXbEkMdcQxsVJKZWRspgxv1\nzJ/f3LGdGMzMelDH1UIuVx3TcR+DmZmVODGYmVmJm5LM+qAaGps9cKJ9qrwvNlZkkO8LJwazPvhD\n3boZ9veFm5LMzKzEicHMzEqcGMzMrMSJwczMSpwYzMysxInBzMxKnBjMzKzEicHMzEr8Azczq6Tt\nM4raJCcGM9uoTWFGUZvkpiQzMytxYjAzsxInBjMzK3FiMDOzEicGM5sTixYNOgKrSsM+bziApGjD\neZiZzRVJRETXQci+YjAzsxInBjMzK3FiMDOzEicGMzMrcWIwszkxNjboCKwqj0oysznhuZLy4lFJ\nZmZWmRODmZmVODGYmVmJE4OZmZU4MZjZnPBcScPDo5LMrBaq4d6f/nc8d2YaleRbe5pZLfyh3h5u\nSjIzsxInBjMzK3FiMDOzEicGMzMrcWIwM7MSJwYzMytxYjAzsxInBjMzK3FiMDOzEicGMzMrcWIw\nM7MSJwYzMytxYjAzsxInBjMzK2k8MUhaKGmlpFWSzp6mzKik5ZLuknRTx/r7Jd2Rtt3adKxmZtbw\njXokzQNWAUcADwPLgOMjYmVHmR2Bm4GjIuIhSa+OiMfTttXA2yJi3Ub+jm/UY2bWg5lu1NP0FcMC\n4J6IeCAiXgQWA8dMKfPHwNUR8RDARFJINAcxmplZh6Y/dHcB1nQsP5jWddobGJF0k6Rlkj7QsS2A\n76T1pzYcq5mZkcetPTcH9gcOB7YDfiTpRxFxL3BwRDwi6TUUCWJFRCztdpCxsbGXn4+OjjI6Otp4\n4GZmw2J8fJzx8fFKZZvuYzgIGIuIhWn5E0BExPkdZc4Gto6Ic9Py3wE3RsTVU461CHgqIj7X5e+4\nj8HMrAeD7GNYBuwlaXdJWwLHA9dNKfMN4BBJm0naFjgQWCFpW0nbA0jaDjgKuKvheM3MNnmNNiVF\nxHpJpwNLKJLQRRGxQtJpxea4MCJWSvo28DNgPXBhRPxC0h7AtZIixXlZRCxpMl4zM2u4KWmuuCnJ\nzKw3g2xKMjOzIePEYGZmJU4MZmZW4sRgZmYlTgw1qfrDkU2B62KS62KS62JS7nXhxFCT3F/oueS6\nmOS6mOS6mPSVr3xl0CHMyInBzGyO3X///YMOYUZODGZmVtKaH7gNOgYzs2Ez3Q/cWpEYzMysPm5K\nMjOzEicGMzMrcWLoIGlnSZdLuifdNe56SXt1KbdQ0kpJq9L9JLod648l3ZEeSyW9pWPb/Wn9ckm3\nNnlOdai5Xg6V9ISk29PjnObPoFk91M9Fkh6T9LNBxDkXqtSFpF0lfU/SzyXdKenPBhVvk6q+L1LZ\neenfw9TbEgxGRPiRHsDNwKkdy/tS3EWus8w84F5gd2AL4KfAb3c51kHAjun5QuCWjm2rgfmDPt8B\n1cuhwHWDPqe5rp+0/hBgP+Bng455wO+V1wH7pefbA3d3e68M+6Pq+yJt+y/A13L5t5HDrT2zIOkw\n4IWI+PLEuoi4s0vRBcA9EfFA2m8xcAywsrNQRNzSsXgL5XtdiyG5Wqu7XiYO20Ssg9BD/RARSyXt\nPmfBzbGqdRERjwKPpudPS1pB8e+j23tlKPXyvpC0K/BO4DPAf52bCGc2FB9Oc+TNwG0Vyu0CrOlY\nfpDyh343HwJu7FgOintYL5N0ak9Rzr0m6uV3Jf1U0rckvanfAAesav1sCnquC0n/huIq6scNxDNI\nvdTF54GPUXwuZMFXDA1L3xxOoWhGmHBwRDwi6TUUCWJFRCwdTIRz7jbgDRHxrKR3AP8I7D3gmGwA\n0q17rwLOiIinBx3PIEh6F/BYRPxU0iiZXE37imHSz4G3Vyj3EPCGjuVd07pXSB3OFwJHR8S6ifUR\n8Uj6/6+BaymaYXJVa71ExNMR8Wx6fiOwhaSROgIdkKr1symoXBeSNqdICpdGxDcajWowqtbFwcDR\nklYDlwOHSbqk0cgqcGJIIuJ7wJaSPjSxTtK+kg6eUnQZsJek3SVtCRwPvGIkgaQ3AFcDH4iIf+5Y\nv236poSk7YCjgLtqP6GaNFAvO3c8X0DxI8u1zUTfvB7q5+XNZPKtsG491sXfA7+IiC/MWYBzqGpd\nRMSfR8QbImJPin8z34uIE+c43FdwYij7D8DvS7pX0p3AeaROsgkRsR44HVhC8a1gcUSsAJB0mqT/\nnIp+ChgBvjRlWOrOwFJJyyk6pb8ZEUuaPrE+1Vkv75V0Vzr//wUcN1cn0aCN1g+ApH+gGKmyt6Rf\nSjpljuOcCxuti/Th+D7g8PRv43ZJCwcQa9MqvS9y5CkxzMysxFcMZmZW4sRgZmYlTgxmZlbixGBm\nZiVODGZmVuLEYGZmJU4MNjQkrU9j3u+U9HVJW9d8/JMkfTE9P0bSb/e4/8WSVqcYfyLpwDrjm63Z\nnItt2pwYbJg8ExH7R8S+wIvAhxv4GxM/7DkW2GcW+58VEfsDn6SYDqUSSZvN4m9V1fO5NByPZc6J\nwYbVPwF7AUh6n6Qfp2/qF0hSWv+UpP+eZnK9OU1aiKR3S7pF0m2SlkysnyDpd4Gjgc+mY+4p6baO\n7Xt1Lk/jB8AbU/kPSbo1/cr3yokrnXSFcYGkW4DzJR2Q4rxNxc2d/m0qd5Kka1OsqyWdLunMFNvN\nknZK5faUdKOKWXu/L2nvLueyR7dy3eLp69WxoebEYMNk4gN/c+AdwJ2pieQ44PfSN/UNFNMtAGwH\n3BwR+1Ekkokpzv8pIg6KiLcBXwdKd5uLiB9RzPP0sXSFshp4QpN34TuFYq6fmRwNTMy/f3VELIiI\nt1Lcc+CDHeV2SbGcBawADklxLQL+sqPcPhTf/BdQzNv/ZDrfW4CJuXUuBE6PiAMopnG+oMu53Net\n3DTx2CbK027bMNlG0u3p+Q+Ai4DTgP2BZelKYWsm56N5ISJuSM9vA45Mz3eTdAXweoq7zd1X4W9f\nBJwi6UyKRHTANOX+WsXtSn/NZAJ4i6RPAztRJKtvd5S/suP5TsAl6UohKP/7vCnNSvuspHXA9Wn9\nncC+KiZk/D3gyokrpnRuJRXKXTl1H9v0ODHYMHk2fUt+Wfpw+2pE/EWX8i90PF/P5Pv9i8BfR8S3\nJB1K8e18Y65O5W4CftI5jfoUZ0XENVPWXUwx9fpdkk6iuL3phGc6nn+aYnbN96i409tNHdue73ge\nHcsb0nnNA9ZNrZ8uNlbumWnW2ybETUk2TLpNV/1dihlbJ/oP5kvabYbyADsAD6fnJ01T5qlUDoCI\neJ7im/4FFB/0vdgeeFTSFkw2c00X18Q9LHqaeTUingLuk/TeiXUdTV8vn8tGypkBTgw2XF4xFXCa\n2vscYImkOyim/X79dOWTc4GrJC2jaPLpZjHwsdQRvEdadxnFlcd006RP9/c+BdxK0c+xYoby/wP4\nq9SxPdO/zen+zvuBD6bO9rso+jnglefyvmnKeaplAzzttlllqX9hh4io0vRkNrTcx2BWgaRrgD2B\nwwcdi1nTfMVgZmYl7mMwM7MSJwYzMytxYjAzsxInBjMzK3FiMDOzEicGMzMr+f9vkgKLQyr3sgAA\nAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10bce2eb8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "eval_data = [[evaluations[j][i]['Accuracy'] for j in range(len(c_range))] for i in range(10)]\n",
     "eval_df = pandas.DataFrame(eval_data, columns = [\"C \" + str(x) for x in c_range])\n",
